--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a1401587_0.t1">
 
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,9 +21,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".MensagemActivity" />
-        <activity android:name=".AlarmeActivity"></activity>
-
+        <activity android:name=".AlarmeActivity" />
+        <activity android:name=".MapaActivity"></activity>
     </application>
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
 </manifest>
