--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 06 15:19:55 BRT 2018
-ndk.dir=C\:\\Users\\Professor\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Professor\\AppData\\Local\\Android\\Sdk
+#Fri Apr 06 18:09:48 BRT 2018
+sdk.dir=D\:\\Users\\14.01587-0\\AppData\\Local\\Android\\Sdk
