--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".MensagemActivity" />
         <activity android:name=".AlarmeActivity" />
         <activity android:name=".MapaActivity" />
-        <activity android:name=".GoletaActivity"></activity>
+        <activity android:name=".GoletaActivity" />
+        <activity android:name=".RegistroActivity"></activity>
     </application>
 
 </manifest>
