--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 07 09:14:35 BRT 2018
-sdk.dir=C\:\\Users\\Professor\\AppData\\Local\\Android\\Sdk
+#Sat Apr 07 21:32:17 BRT 2018
+sdk.dir=C\:\\Users\\Levon\\AppData\\Local\\Android\\Sdk
