--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +28,7 @@
         <activity android:name=".GoletaActivity" />
         <activity android:name=".RegistroActivity" />
         <activity android:name=".TelefoneActivity" />
+        <activity android:name=".CronometroActivity"></activity>
     </application>
 
 </manifest>
