--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
-
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,7 +29,8 @@
         <activity android:name=".GoletaActivity" />
         <activity android:name=".RegistroActivity" />
         <activity android:name=".TelefoneActivity" />
-        <activity android:name=".CronometroActivity"></activity>
+        <activity android:name=".CronometroActivity" />
+        <activity android:name=".EventoActivity"></activity>
     </application>
 
 </manifest>
